--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "dependencies": {
         "cookie-parser": "^1.4.5",
         "express": "^4.17.1",
-        "google-auth-library": "^7.10.1"
+        "google-auth-library": "^7.10.1",
+        "googleapis": "^89.0.0",
+        "nodemon": "^2.0.14"
     }
 }
